Corrections in Ticket-11 code after pull of remote master with Ticket-2 code